syntax = "proto3";
package game.skills;

option csharp_namespace = "Contracts.EquipSlots";
 
message EquipSlotPb{
	int32 id = 1;
	string code = 2; 
	string name = 3;
	int32 sort_order = 4;
	int32 icon_id = 5; 
	int64 updated_at = 6;
}

message EquipSlotListPb{
	repeated EquipSlotPb equipSlots = 1; 
}